plugins {
	id 'java'
	id 'org.springframework.boot' version "${springBootVersion}"
	id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
	id 'org.hibernate.orm' version "${hibernateVersion}"
	id 'org.graalvm.buildtools.native' version "${graalvmBuildtoolsVersion}"
}

group = 'io.github.kprasad99'
version = '1.0.0-SNAPSHOT'
description = 'Backend Application for Employee Portal'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
  runtimeOnly "io.netty:netty-transport-native-epoll:${nettyNativeVersion}:linux-x86_64"
	implementation 'org.springframework.boot:spring-boot-micrometer-tracing'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
	implementation 'org.flywaydb:flyway-database-postgresql'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-micrometer-tracing-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webflux-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

hibernate {
	enhancement {
		enableAssociationManagement = true
	}
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs '--enable-native-access=ALL-UNNAMED'
}
bootRun {
    systemProperties = System.properties
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

bootJar {
    archiveFileName = "${project.name}.jar"
    layered {
		enabled = true
	}
}

graalvmNative {
	binaries {
        main {
            javaLauncher = javaToolchains.launcherFor {
                languageVersion = JavaLanguageVersion.of(21)
                vendor = JvmVendorSpec.matching("Oracle Corporation")
            }
            // GraalVM Enterprise only https://www.graalvm.org/22.0/reference-manual/native-image/Options/
            // buildArgs.add('--pgo')
            // buildArgs.add('--gc=G1')
		// 	buildArgs.add('--trace-class-initialization=ch.qos.logback.classic.Logger')
      	// 	buildArgs.add('--trace-object-instantiation=ch.qos.logback.core.AsyncAppenderBase$Worker')
      	// 	buildArgs.add('--initialize-at-build-time=org.slf4j.LoggerFactory,ch.qos.logback')
		// //	buildArgs.add('--initialize-at-run-time=io.micrometer.common.util.internal.logging.LocationAwareSlf4JLogger')
        }
    }
}
